--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 - projects
 - contact
 - hobbies
-- funfact
+- joke
 - clear
 (Use ↑ ↓ for history, Tab to auto-complete, cls = clear)`,
 
@@ -122,7 +122,7 @@ GitHub: https://github.com/Aaks-hatH`,
 - Playing the Saxophone
 - Exploring cybersecurity tricks`,
 
-      funfact: `Fun fact: You’ve been staring at this terminal longer than your browser cache lifetime 😉`,
+      joke: `Funny joke: Social engineering is 90% charm, 10% knowing too much.`,
 
       clear: "clear"
     };
