--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 - contact
 - hobbies
 - joke
+- Favcolor
 - clear
 (Use ↑ ↓ for history, Tab to auto-complete, cls = clear)`,
 
@@ -123,6 +124,8 @@ GitHub: https://github.com/Aaks-hatH`,
 - Exploring cybersecurity tricks`,
 
       joke: `Funny joke: Social engineering is 90% charm, 10% knowing too much.`,
+
+      favcolor: `#0d00ff`,
 
       clear: "clear"
     };
