--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ GitHub: https://github.com/Aaks-hatH`,
 
       joke: `Funny joke: Social engineering is 90% charm, 10% knowing too much.`,
 
-      favcolor: `#0d00ff`,
+      favcolor: `Favorite Color: #0d00ff`,
 
       clear: "clear"
     };
@@ -137,6 +137,7 @@ GitHub: https://github.com/Aaks-hatH`,
       mycontact: "contact",
       myhobbies: "hobbies",
       myfunfact: "funfact",
+      myfavcolor: "favcolor",
       cls: "clear"
     };
 
