--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
   <button id="theme-toggle">Toggle Theme</button>
   <div id="terminal">
-    <p>Welcome to <strong>Aaks-hatH Terminal</strong> 💻<br>
+    <p>Welcome to <strong>Aaks-hatH Terminal</strong> <br>
     Type <strong>help</strong> to see available commands.<br></p>
   </div>
 
@@ -118,7 +118,7 @@ GitHub: https://github.com/Aaks-hatH`,
 GitHub: https://github.com/Aaks-hatH`,
 
       hobbies: `Hobbies:
-- Listening to music 🎧
+- Listening to music 
 - Coding random scripts
 - Playing the Saxophone
 - Exploring cybersecurity tricks`,
